# rigidity-application

./: .env  .gitignore  Cargo.toml  Makefile  README.md  diesel.toml  example.env
migrations/2021-01-11-091141_users/: up.sql
migrations/2021-01-18-184832_custom_room/: down.sql  up.sql
migrations/2021-05-25-092241_custom_room_gmode/: down.sql  up.sql
migrations/2022-03-15-090451_update_map_enum/: down.sql  up.sql
migrations/2022-03-15-113708_custom_room_default_enums/: down.sql  up.sql
migrations/2022-03-30-072021_new_archetypes_assassin/: down.sql  up.sql
migrations/2022-04-15-082107_add_map_play_ground/: down.sql  up.sql
migrations/2022-07-04-121544_users_update_steam/: down.sql  up.sql
migrations/2022-07-22-081218_user_email_confirmation/: down.sql  up.sql
migrations/2022-12-06-091148_grow_user_hash_for_64bit_salt/: up.sql
src/: app_conf.rs  auth_handler.rs  cmd.rs  enums.rs  errors.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  models.rs  schema.rs  services.rs  utils.rs
src/app_conf/: api_routes.rs  aws_routes.rs  open_routes.rs  static_routes.rs  ws_routes.rs
src/handlers/: auth.rs  aws.rs  custom_room.rs  user.rs
src/handlers/custom_room/: dtos.rs
src/models/: custom_room.rs  errors.rs  forms.rs  user.rs
src/models/custom_room/: form.rs
src/models/forms/: user.rs
src/services/: auth.rs  aws.rs  custom_room.rs  email.rs  steam.rs  websocket.rs
src/services/websocket/: lobby.rs  messages.rs  ws.rs
static/: ask_password_reset.html  email_confirmation.html  login.html  main.css  main.js  reset_password.html
static/assets/js/: main.js
static/html/: 404.html  ask_password_reset.html  email_confirmation.html  login.html  reset_password.html
