[package]
name = "rigidity-application"
version = "0.1.0"
authors = ["He-aD <ge.tristan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3"
actix-rt = "1.0.0"
actix-web = "3"
actix-files = "0.3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger="0.8.2"
futures = "0.3"
lazy_static = "1.4"
r2d2 = "0.8.9"
rust-argon2="0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparkpost="0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.2"
mailgun-rs="0.1.3"
rand="0.8.1"
