[package]
name = "rigidity-application"
version = "0.1.0"
authors = ["He-aD <ge.tristan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"]}
actix-identity = "0.5.2"
actix-web = { version = "4", features = ["openssl"]}
actix-files = "0.6.2"
actix-web-actors = "4.1.0"
actix = "0.13"
awc = { version = "3.0.0", features = ["openssl"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger="0.8.2"
futures-util = "0.3"
lazy_static = "1.4"
r2d2 = "0.8.9"
rust-argon2="0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparkpost="0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.2"
rand="0.8.1"
rusoto_core = "0.43.0"
rusoto_gamelift="0.43.0"